--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Albert-AI.X | Cerveau en Opération</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>NeuraX-Ultime | Cerveau en Opération</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-
     body {
       margin: 0;
       background: #0a0a0a;
@@ -20,6 +18,24 @@
       left: 0;
       z-index: 0;
     }
+
+    .background-brain {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 60vw;
+      max-width: 800px;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      opacity: 0.1;
+      animation: brainPulse 4s ease-in-out infinite;
+    }
+
+    @keyframes brainPulse {
+      0%, 100% { transform: translate(-50%, -50%) scale(1); opacity: 0.1; }
+      50% { transform: translate(-50%, -50%) scale(1.05); opacity: 0.2; }
+    }
+
     .dashboard {
       position: relative;
       z-index: 1;
@@ -31,6 +47,7 @@
       padding: 2em;
       text-align: center;
     }
+
     .start-button {
       margin-top: 2em;
       padding: 1em 2em;
@@ -45,30 +62,128 @@
       transition: background 0.3s, color 0.3s, transform 0.2s;
       box-shadow: 0 0 10px #00ffe1, 0 0 20px #00ffe1;
     }
+
     .start-button:hover {
       background: #00ffe1;
       color: #000;
       transform: scale(1.05);
     }
+
     .functions {
       margin-top: 2em;
       text-align: left;
       max-width: 400px;
     }
+
     .functions li {
       margin-bottom: 0.5em;
-      list-style:
+      list-style: none;
+    }
 
-<!-- Assistant visuel animé -->
-<div id="assistant" style="position: absolute; bottom: 10%; left: 2%; z-index: 5;">
-  <img src="https://media.giphy.com/media/3oKIPtjElfqwMOTbH2/giphy.gif" alt="Assistant IA" style="height: 100px; border-radius: 50%; box-shadow: 0 0 15px #00ffe1;">
-</div>
+    .functions li::before {
+      content: '🧠';
+      margin-right: 0.5em;
+    }
 
-<!-- Contrôle du fond sonore -->
-<button onclick="toggleAudio()" style="position:absolute; top:1em; right:1em; z-index:5; background:#000; color:#00ffe1; border:2px solid #00ffe1; padding:0.5em 1em; border-radius:8px; cursor:pointer;">🎵 Son ON/OFF</button>
-<audio id="bg-audio" loop>
-  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_b7b5c3d203.mp3" type="audio/mpeg">
-</audio>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-<!-- Lien GitHub -->
-<a href="https://github.com/Sav-art/NeuraX-ultime" target="_blank" style="position: absolute; bottom: 1em; left: 50%; transform: translateX(-50%); z-index:5; color:#00ffe1; text-decoration:none; font-size:0.9em;">🔗 Voir le projet sur GitHub</a>
+    @keyframes pulse {
+      0%, 100% { box-shadow: 0 0 10px #00ffe1; }
+      50% { box-shadow: 0 0 20px #00ffe1; }
+    }
+  </style>
+</head>
+<body>
+  <canvas id="neuralCanvas"></canvas>
+
+  <!-- SVG Cerveau en arrière-plan -->
+  <div class="background-brain">
+    <svg viewBox="0 0 512 512" fill="#00ffe1" xmlns="http://www.w3.org/2000/svg">
+      <path d="M256 32C167.6 32 96 103.6 96 192v128c0 88.4 71.6 160 160 160s160-71.6 160-160V192c0-88.4-71.6-160-160-160zm-64 400c-52.9 0-96-43.1-96-96V192c0-52.9 43.1-96 96-96s96 43.1 96 96v144c0 52.9-43.1 96-96 96zm128-96V192c0-35.3-14.3-67.2-37.5-90.5C310.8 119.8 320 154.5 320 192v144c0 37.5-9.2 72.2-37.5 90.5C305.7 363.2 320 331.3 320 296z"/>
+    </svg>
+  </div>
+
+  <div class="dashboard">
+    <h1>🧠 NeuraX-Ultime</h1>
+    <p>Tableau de bord neuronal en temps réel</p>
+    <button class="start-button" onclick="launchNeuraX()">Activer le cerveau</button>
+    <ul class="functions">
+      <li>Auto-réplication neuronale</li>
+      <li>Sauvegarde JSON automatique</li>
+      <li>Statistiques du cerveau</li>
+      <li>Synthèse vocale intégrée</li>
+      <li>Interconnexion des modules</li>
+    </ul>
+  </div>
+
+  <script>
+    function launchNeuraX() {
+      const phrase = "Connexion à NeuraX établie. Le système cérébral est opérationnel.";
+      const utterance = new SpeechSynthesisUtterance(phrase);
+      utterance.lang = "fr-FR";
+      speechSynthesis.speak(utterance);
+      alert(phrase);
+    }
+
+    // Animation canvas neurale
+    const canvas = document.getElementById('neuralCanvas');
+    const ctx = canvas.getContext('2d');
+    let w, h;
+
+    function resize() {
+      w = canvas.width = window.innerWidth;
+      h = canvas.height = window.innerHeight;
+    }
+
+    window.addEventListener('resize', resize);
+    resize();
+
+    const nodes = Array.from({ length: 50 }, () => ({
+      x: Math.random() * w,
+      y: Math.random() * h,
+      vx: (Math.random() - 0.5) * 0.5,
+      vy: (Math.random() - 0.5) * 0.5
+    }));
+
+    function draw() {
+      ctx.clearRect(0, 0, w, h);
+      for (let i = 0; i < nodes.length; i++) {
+        const n1 = nodes[i];
+        ctx.beginPath();
+        ctx.arc(n1.x, n1.y, 2, 0, Math.PI * 2);
+        ctx.fillStyle = '#00ffe1';
+        ctx.fill();
+
+        for (let j = i + 1; j < nodes.length; j++) {
+          const n2 = nodes[j];
+          const dx = n1.x - n2.x;
+          const dy = n1.y - n2.y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          if (dist < 120) {
+            ctx.strokeStyle = 'rgba(0,255,225,0.1)';
+            ctx.lineWidth = 1;
+            ctx.beginPath();
+            ctx.moveTo(n1.x, n1.y);
+            ctx.lineTo(n2.x, n2.y);
+            ctx.stroke();
+          }
+        }
+      }
+
+      nodes.forEach(n => {
+        n.x += n.vx;
+        n.y += n.vy;
+        if (n.x < 0 || n.x > w) n.vx *= -1;
+        if (n.y < 0 || n.y > h) n.vy *= -1;
+      });
+
+      requestAnimationFrame(draw);
+    }
+
+    draw();
+  </script>
+</body>
+</html>
